--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pandehelper",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "next": "14.2.13",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.0.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "purgecss": "^6.0.0"
   }
 }
