--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postcss-preset-env": "^10.0.5",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "purgecss": "^6.0.0"
