--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BOT_ID=1088892665422151710
 NEXT_PUBLIC_BOT_PERMS=8
 PAGES_FOLDER=src/pages
+APP_CLIENT_ID=app_client_id
+APP_TOKEN=bot_token
